--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.firebaseui:firebase-ui-auth:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v4:24.1.0'
+    compile 'com.android.support:customtabs:24.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
