--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:24.1.0'
     compile 'com.android.support:customtabs:24.3.0'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
