--- a/Shout/app/src/main/AndroidManifest.xml
+++ b/Shout/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".MyProfileActivity"></activity>
+        <activity android:name=".MyProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
