Set up Location Update, needs tweaking

--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.roughike:bottom-bar:2.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.firebase:geofire-android:2.1.1'
 }
 
 
