--- a/Shout/app/src/main/AndroidManifest.xml
+++ b/Shout/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".activities.ChatRoomCreation"
+        <activity android:name=".activities.ChatRoomCreationActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
