--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.firebaseui:firebase-ui-auth:1.0.0'
+    compile 'com.firebaseui:firebase-ui-database:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:customtabs:24.3.0'
