--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.firebase:geofire-android:2.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
 }
 
 
