Added the render of google maps for cluter the Facebook images into the markers in the map.

--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+dependencies {
+    compile project(':library')
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.2"
