--- a/Shout/gradle.properties
+++ b/Shout/gradle.properties
@@ -1,5 +1,10 @@
 # Project-wide Gradle settings.
+signing.keyId=
+signing.password=
+signing.secretKeyRingFile=
 
+sonatypeUsername=
+sonatypePassword=
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
