--- a/Shout/app/build.gradle
+++ b/Shout/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -48,6 +49,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.android.support:multidex:1.0.0'
 }
 
 
